# ostree-pin

./: .stack-all  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  Main.hs  README.md  ostree-pin.cabal  ostree-pin.sh  stack.yaml
.github/workflows/: build.yml  rust.yml
src/: Main.hs  main.rs
