cabal-version:       2.0
name:                ostree-pin
version:             0.1
synopsis:            Tool to pin ostree deployments
description:         Tool to pin ostree deployments
homepage:            https://github.com/juhp/ostree-pin
bug-reports:         https://github.com/juhp/ostree-pin/issues
license:             GPL-3
license-file:        LICENSE
author:              Jens Petersen
maintainer:          juhpetersen@gmail.com
copyright:           2019 Jens Petersen
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.4.4, GHC == 8.6.4

source-repository head
  type:                git
  location:            https://github.com/juhp/ostree-pin.git

executable ostree-pin
  main-is:             Main.hs

  build-depends:       base < 5
                     , basic-prelude
                     , gi-gio
                     , gi-ostree

  ghc-options:         -Wall

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
